can pass closure action into component

--- a/app/templates/components/models-table.hbs
+++ b/app/templates/components/models-table.hbs
@@ -13,7 +13,7 @@
   <!-- Div needed by Firefox to reset floating positioning -->
   <div style="clear:both"/>
 
-  <div class="{{classes.innerTableWrapper}}">
+  <div class="{{classes.innerTableWrapper}}" style="padding-top:20px;">
     <table class="{{classes.table}}">
       {{! table header start }}
       <thead>
